--- a/wwr/index.html
+++ b/wwr/index.html
@@ -8,11 +8,17 @@
 </head>
 <body>
     <div id="content">
-    <header>
+    <header> {
+        display: grid;
+        grid-template-columns: 150px auto;
+    }
         <a id="logo_link" href="index.html">
             <img class = "logo" src="images/logo.png" alt="Dry Oar Logo">
         </a>
-        <nav>
+        <nav> {
+            display: flex;
+            justify-content: space-around;
+        }
             <a> href= "index.html">Home</a>
             <a> href= "#">Page 2</a>
             <a> href= "site-plan-rafting.html">Site Plan</a>
@@ -20,15 +26,31 @@
         </nav>
     </header>
     <div id="hero">
-        <div id="hero-box">
+        #hero {
+            display: grid;
+            grid-template-columns: 1fr 3fr 1fr;
+            margin-top: -100px;
+        }
+        <div id="hero-box"> 
+            #hero-box {
+                grid-column: 1/4;
+                grid-row: 1/3;
+                z-index: -1;
+            }
             <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
         </div>
     
         <section id="hero-msg">
+            #hero-msg h4{
+                color: white;
+            }
+            #hero-img {
+                width: 100%;
+            }
             <h1 class="home-title">Have An Adventure</h1>
             <h4>Make Memories with Dry Oar </h4>
             <div class='button-box'>
-                <a class='book' href="contactus.html">Book Now</a>
+                <a class='book' href="rates.html">Book Now</a>
             </div>
         </section>
     </div>
@@ -54,6 +76,9 @@
             <h2>More Than Just The Thrill</h2>
             <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
             <a class="join" href="rivers.html">Join Us</a>
+            .card-img, .mountains {
+                width: 100%;
+            }
 
         </section>
     </main>
@@ -72,6 +97,14 @@
                 <img src="images/instagram.png" alt="instagram icon">
             </a>
         </div>
+        footer {
+            background-color: #6f7364;
+            padding: 25px 50px;
+            margin-top: 200px; 
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+        }
     </footer>
 </div>
     
