--- a/myportfolio/site-plan.html
+++ b/myportfolio/site-plan.html
@@ -44,13 +44,23 @@
       <h3>
         Color Palette
       </h3>
+      <p>Palette URL:</p>
+    <a href="https://coolors.co/f7d1cd-e8c2ca-d1b3c4-b392ac-735d78"
+      target="_blank">https://coolors.co/f7d1cd-e8c2ca-d1b3c4-b392ac-735d78</a>
       <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn. You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Switch to the site-plan.css file and change your colors there. -->
         <tr><td class="primary"></td><td class="secondary"></td><td class="accent1"></td><td class="accent2"></td></tr>
-      </table>
+        <tr>
+            <td class="primary">[#F7D1CD]</td>
+            <td class="secondary">[#E8C2CA]</td>
+            <td class="accent1">[#D1B3C4]</td>
+            <td class="accent2"></td>
+          </tr>
+        
+    </table>
 
       <!-- ------------------------Step 9------------------------------ -->
 
