--- a/myportfolio/site-plan.html
+++ b/myportfolio/site-plan.html
@@ -33,7 +33,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="C:\Users\rocio\OneDrive\Escritorio\Escuela\Spring Semester\Web Fundamentals\wdd130\myportfolio\images" alt="Logo image">
+      <img src="images/logo.png" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -50,14 +50,14 @@
       <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn. You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
       <table class="colors">
-        <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
+        <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th></tr>
         <!-- Switch to the site-plan.css file and change your colors there. -->
         <tr><td class="primary"></td><td class="secondary"></td><td class="accent1"></td><td class="accent2"></td></tr>
         <tr>
             <td class="primary">[#F7D1CD]</td>
             <td class="secondary">[#E8C2CA]</td>
             <td class="accent1">[#D1B3C4]</td>
-            <td class="accent2"></td>
+            
           </tr>
         
     </table>
@@ -70,10 +70,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: [Font Name here]  <!-- change this -->
+        Heading Font: "IM Fell French Canon SC";  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [Font Name here]  <!-- change this -->
+        Paragraph Font: Lato, Helvetica, sans-serif;  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
