--- a/myportfolio/site-plan.html
+++ b/myportfolio/site-plan.html
@@ -185,6 +185,7 @@
       <p>Images for the Page 3</p>
         <img src="images/design.webp" alt="image for page3">
         
+        
 
       </ul>
       <hr>
@@ -196,21 +197,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        This is me!
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src=images/logo.png alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Projects Page</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        These are my projects.
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/portfolio-wireframe.png" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Contact Page</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        Here's how you can reach me.
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/contact-wireframe.png" alt="page 3 wireframe">
     </main>
   </body>
 
