--- a/myportfolio/contact.html
+++ b/myportfolio/contact.html
@@ -2,8 +2,8 @@
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
-  <title>Rocio Orellana | Portfolio</title>
-  <link rel="stylesheet" href="styles/site-plan.css"> 
+  <title>Rocio Orellana | Contact</title>
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
 
@@ -21,22 +21,20 @@
 
   <main>
     <section>
-      <h2>Why Reach Out?</h2>
-      <p>If you’re interested in working together, have questions about my work, or just want to connect, I’d love to hear from you. 
-         I'm currently open to internships, freelance opportunities, and collaborations on creative projects.</p>
-      <img src="images/design.webp" alt="Design elements and tools">
-    </section>
+      <h2>Contact Me</h2>
+      <p>If you’d like to work together or just say hello, feel free to send me a message!</p>
+      <form action="#" method="post">
+        <label for="name">Name:</label><br>
+        <input type="text" id="name" name="name" required><br><br>
 
-    <section>
-      <h2>How to Get In Touch</h2>
-      <p>You can fill out the simple contact form on this page, and I’ll get back to you as soon as possible. 
-         I’m also happy to provide more details about any of the projects listed or send a copy of my resume.</p>
-    </section>
+        <label for="email">Email:</label><br>
+        <input type="email" id="email" name="email" required><br><br>
 
-    <section>
-      <h2>Available and Responsive</h2>
-      <p>I try to respond within 24–48 hours and enjoy meaningful conversations about design, technology, or career opportunities. 
-         Feel free to ask questions—even if you’re just curious about how I built something on my site!</p>
+        <label for="message">Message:</label><br>
+        <textarea id="message" name="message" rows="5" required></textarea><br><br>
+
+        <input type="submit" value="Send Message">
+      </form>
     </section>
   </main>
 
