--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Rocio Orellana | Portfolio</title>
-  <link rel="stylesheet" href="styles/site-plan.css"> 
+  <link rel="stylesheet" href="styles/styles.css">
+ 
 </head>
 <body>
 
