--- a/myportfolio/projects.html
+++ b/myportfolio/projects.html
@@ -2,8 +2,8 @@
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
-  <title>Rocio Orellana | Portfolio</title>
-  <link rel="stylesheet" href="styles/site-plan.css"> 
+  <title>Rocio Orellana | Projects</title>
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
 
@@ -21,23 +21,11 @@
 
   <main>
     <section>
-      <h2>Web Development Projects</h2>
-      <p>Here you’ll find a variety of projects I’ve worked on during my time at BYU–Idaho and beyond. From simple HTML/CSS landing pages to more advanced JavaScript and React applications, each project has taught me something valuable.
-         I include short descriptions of the project goals, tools used, and the challenges I overcame</p>
-      <img src="images/workspace.jpg" alt="Workspace with code and design tools">
+      <h2>My Projects</h2>
+      <p>Here are some examples of my recent work. I focus on clean, user-friendly designs that solve real problems.</p>
     </section>
 
-    <section>
-      <h2>Design Portfolio</h2>
-      <p>In addition to coding, I’ve worked on the design side of web development. I enjoy using tools like Figma and Adobe XD to plan UI/UX layouts before coding begins.
-         You’ll see design mockups, wireframes, and branding examples here that show my attention to visual hierarchy, color schemes, and typography.</p>
-    </section>
-
-    <section>
-      <h2>Technical Skills</h2>
-      <p>Each project includes the technologies I used—like HTML5, CSS3, JavaScript, React, Git, and more. I also highlight any group collaboration or Agile practices I followed to bring the project to life. 
-         These skills are constantly growing as I learn new frameworks and design trends.</p>
-    </section>
+   
   </main>
 
   <footer>
