--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -22,6 +22,20 @@
 
   <main>
     <section>
+      <div class="card">
+        <img src="images/person.jpg" alt="Rocio Orellana" style="width:100%">
+        <h1>Rocio Orellana</h1>
+        <p class="title">Web Designer & Developer</p>
+        <p>BYU–Idaho</p>
+        <div style="margin: 24px 0;">
+          <a href="#"><i class="fa fa-twitter"></i></a>
+          <a href="www.linkedin.com/in/rocío-orellana-83643a258"><i class="fa fa-linkedin"></i></a>
+          
+        </div>
+        <p><button>Contact Me</button></p>
+      </div>
+    </section>
+    <section>
       <h2>About Me</h2>
       <p>Hi! I'm Rocio Orellana, a web designer currently studying at BYU–Idaho. I'm passionate about building user-friendly websites and creating visually compelling digital experiences.</p>
       <img src="images/person.jpg" alt="Portrait of Rocio">
