--- a/myportfolio/projects.html
+++ b/myportfolio/projects.html
@@ -20,12 +20,21 @@
   </header>
 
   <main>
-    <section>
-      <h2>My Projects</h2>
-      <p>Here are some examples of my recent work. I focus on clean, user-friendly designs that solve real problems.</p>
-    </section>
-
-   
+    <h2>My Projects</h2>
+    <div class="project-grid">
+      <div class="project-card">
+        <h3>Responsive Portfolio</h3>
+        <p>This project showcases a fully responsive portfolio website with a modern design and custom CSS grid layout.</p>
+      </div>
+      <div class="project-card">
+        <h3>Business Landing Page</h3>
+        <p>A clean and functional landing page for a small business, featuring call-to-action buttons and a hero image.</p>
+      </div>
+      <div class="project-card">
+        <h3>Interactive Gallery</h3>
+        <p>A gallery project with hover effects and lightbox features, demonstrating image overlays and user-friendly navigation.</p>
+      </div>
+    </div>
   </main>
 
   <footer>
@@ -35,3 +44,4 @@
 
 </body>
 </html>
+
