--- a/myportfolio/contact.html
+++ b/myportfolio/contact.html
@@ -20,22 +20,20 @@
   </header>
 
   <main>
-    <section>
-      <h2>Contact Me</h2>
-      <p>If you’d like to work together or just say hello, feel free to send me a message!</p>
-      <form action="#" method="post">
-        <label for="name">Name:</label><br>
-        <input type="text" id="name" name="name" required><br><br>
+    <h2>Contact Me</h2>
+    <p>Have a question, project idea, or just want to say hello? Fill out the form below and I’ll get back to you as soon as I can!</p>
+    <form class="contact-form" action="#" method="post">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required>
 
-        <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email" required><br><br>
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required>
 
-        <label for="message">Message:</label><br>
-        <textarea id="message" name="message" rows="5" required></textarea><br><br>
+      <label for="message">Message:</label>
+      <textarea id="message" name="message" rows="5" required></textarea>
 
-        <input type="submit" value="Send Message">
-      </form>
-    </section>
+      <input type="submit" value="Send Message">
+    </form>
   </main>
 
   <footer>
@@ -45,3 +43,4 @@
 
 </body>
 </html>
+
