--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -20,16 +20,16 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[This is where I will tupe the purpose of the website. I will point out
-      why we need the website, what we want to accomplish with it. And how this
-      will benefit our rafting company.]</p>
+    <p>The purpose of this website is to inspire adventure seekers to experience the thrill of whitewater rafting with our company. 
+      By providing clear information about our guided trips, safety standards, booking options, and stunning local rivers, our goal is to attract new customers, 
+      build trust with returning guests, and make the reservation process easy and convenient. This website will help us reach a wider audience, showcase our unique river experiences, and grow our business by turning website visitors into loyal rafters.</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[This is where I will type who I think the type of person who would visit
-      this site would be. What type of person do we need to keep in mind as we
-      are building our site. How will our content, colors, fonts, etc be something 
-      that would be inviting to this kind of person.]</p>
+    <p>Our target audience is adventure-loving individuals, families, and groups—typically ages 18–50—who are looking for an exciting outdoor experience. Many are first-time or occasional rafters who value safety, clear trip details, and trustworthy guides. 
+      Some visitors will be seasoned outdoor enthusiasts searching for challenging rapids and unique destinations. As we build this site, we will keep this audience in mind by using energetic, bold visuals, high-quality river photos, and colors that evoke nature 
+      and excitement—like blues, greens, and splashes of white. Our fonts will be clean and easy to read but convey a sense of adventure. The content will be welcoming, informative, and straightforward, helping visitors quickly find trip options, safety information, 
+      and easy online booking so they feel confident choosing our company for their next river adventure.</p>
     <!-- change this -->
 
     <hr />
@@ -72,11 +72,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Font Name here]
+      Heading Font: [Oswald]
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [Font Name here]
+      Paragraph Font: [Lato]
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
