--- a/myportfolio/site-plan.html
+++ b/myportfolio/site-plan.html
@@ -108,10 +108,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Projects Page <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Contact Page  <!-- change this -->
         </div>
 
         <div class="top">
