--- a/myportfolio/site-plan.html
+++ b/myportfolio/site-plan.html
@@ -107,10 +107,10 @@
         <div class="sm-home">
           Home
         </div>
-        <div class="sm-page2">
+        <div class="sm-projects">
           Projects Page <!-- change this -->
         </div>
-        <div class="sm-page3">
+        <div class="sm-contact">
           Contact Page  <!-- change this -->
         </div>
 
