--- a/myportfolio/projects.html
+++ b/myportfolio/projects.html
@@ -23,17 +23,17 @@
     <h2>My Projects</h2>
     <div class="project-grid">
       <div class="project-card">
-        <img src="images/project1.jpg" alt="Responsive Portfolio"
+        <img src="images/project1.png" alt="Responsive Portfolio">
         <h3>Responsive Portfolio</h3>
         <p>This project showcases a fully responsive portfolio website with a modern design and custom CSS grid layout.</p>
       </div>
       <div class="project-card">
-        <img src="images/project2.jpg" alt="Business Landing Page">
+        <img src="images/project2.png" alt="Business Landing Page">
         <h3>Business Landing Page</h3>
         <p>A clean and functional landing page for a small business, featuring call-to-action buttons and a hero image.</p>
       </div>
       <div class="project-card">
-        <img src="images/project3.jpg" alt="Interactive Gallery">
+        <img src="images/project3.png" alt="Interactive Gallery">
         <h3>Interactive Gallery</h3>
         <p>A gallery project with hover effects and lightbox features, demonstrating image overlays and user-friendly navigation.</p>
       </div>
@@ -47,4 +47,3 @@
 
 </body>
 </html>
-
