--- a/myportfolio/contact.html
+++ b/myportfolio/contact.html
@@ -20,8 +20,10 @@
   </header>
 
   <main>
+    <section>
     <h2>Contact Me</h2>
     <p>Have a question, project idea, or just want to say hello? Fill out the form below and I’ll get back to you as soon as I can!</p>
+    </section>
     <form class="contact-form" action="#" method="post">
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required>
@@ -34,6 +36,7 @@
 
       <input type="submit" value="Send Message">
     </form>
+  </section>
   </main>
 
   <footer>
