--- a/myportfolio/contact.html
+++ b/myportfolio/contact.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Rocio Orellana | Contact</title>
   <link rel="stylesheet" href="styles/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon+SC&family=Lato&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -20,23 +21,28 @@
   </header>
 
   <main>
+    <!--  Contact Message + Image -->
     <section>
-    <h2>Contact Me</h2>
-    <p>Have a question, project idea, or just want to say hello? Fill out the form below and I’ll get back to you as soon as I can!</p>
+      <h2>Contact Me</h2>
+      <p>Have a question, project idea, or just want to say hello? Fill out the form below and I’ll get back to you as soon as I can!</p>
+      <img src="images/design.webp" alt="Web design workspace">
     </section>
-    <form class="contact-form" action="#" method="post">
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required>
 
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
+    <!-- Contact Form -->
+    <section>
+      <form class="contact-form" action="#" method="post">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required>
 
-      <label for="message">Message:</label>
-      <textarea id="message" name="message" rows="5" required></textarea>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
 
-      <input type="submit" value="Send Message">
-    </form>
-  </section>
+        <label for="message">Message:</label>
+        <textarea id="message" name="message" rows="5" required></textarea>
+
+        <input type="submit" value="Send Message">
+      </form>
+    </section>
   </main>
 
   <footer>
@@ -46,4 +52,3 @@
 
 </body>
 </html>
-
